mdapipkg/objects/Event__c.object
<CustomObject>
    <fields>
        <fullName>Trainer_Name__c</fullName>
        <label>Trainer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Code__c</fullName>
        <label>Training Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Event__c</fullName>
        <inlineHelpText>This will signify if the event is a training event or not.</inlineHelpText>
        <label>Training Event?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Status__c</fullName>
        <label>Training Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Schedule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Training_Event__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Board &amp; Governance: Regional Board Meeting</fullName>
                </value>
                <value>
                    <fullName>Board &amp; Governance: Regional Executive Committee Meeting</fullName>
                </value>
                <value>
                    <fullName>Board &amp; Governance: Regional Strategic Planning Session</fullName>
                </value>
                <value>
                    <fullName>Champion Development and Education</fullName>
                </value>
                <value>
                    <fullName>Global EDGE</fullName>
                </value>
                <value>
                    <fullName>Board &amp; Governance: International</fullName>
                </value>
                <value>
                    <fullName>Chapter</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Experience</fullName>
                </value>
                <value>
                    <fullName>Forum Program</fullName>
                </value>
                <value>
                    <fullName>GCC &amp; Webinar</fullName>
                </value>
                <value>
                    <fullName>Global Leadership Conference</fullName>
                </value>
                <value>
                    <fullName>Industry Roundtable</fullName>
                </value>
                <value>
                    <fullName>Meeting-in-Meeting</fullName>
                </value>
                <value>
                    <fullName>Seminar</fullName>
                </value>
                <value>
                    <fullName>Training and Education</fullName>
                </value>
                <value>
                    <fullName>University</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>GLC</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>On-Demand</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Validation_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>YPO_WPO_Approved__c</fullName>
        <description>May be used with FF, Cvent, and or Wave</description>
        <label>YPO-WPO Approved?</label>
        <type>TextArea</type>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Events</fullName>
        <columns>Sponsors__c</columns>
        <columns>Event_Name__c</columns>
        <columns>NAME</columns>
        <columns>Program_Format__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Title__c</field>
            <operation>contains</operation>
            <value>YPO EDGE Vancouver 2017</value>
        </filters>
        <label>Custom Events Filter</label>
    </listViews>
    <listViews>
        <fullName>EventsChapterActive</fullName>
        <columns>Sponsors__c</columns>
        <columns>Event_Name__c</columns>
        <columns>NAME</columns>
        <columns>Program_Format__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Focus_Sub_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Format__c</field>
            <operation>equals</operation>
            <value>Chapter,Chapter Event</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active,Pending,Closed,Completed</value>
        </filters>
        <label>Events - Chapter only - Active</label>
    </listViews>
    <listViews>
        <fullName>EventsIntl</fullName>
        <columns>Event_Name__c</columns>
        <columns>NAME</columns>
        <columns>Program_Format__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Sponsors__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Format__c</field>
            <operation>notEqual</operation>
            <value>Chapter,Chapter Event</value>
        </filters>
        <label>Events - International</label>
    </listViews>
    <listViews>
        <fullName>EventsIntlActive</fullName>
        <columns>Event_Name__c</columns>
        <columns>NAME</columns>
        <columns>Program_Format__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Sponsors__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Format__c</field>
            <operation>notEqual</operation>
            <value>Chapter,Chapter Event</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled,Completed</value>
        </filters>
        <label>Events - International - Active</label>
    </listViews>
    <listViews>
        <fullName>EventsIntldeb</fullName>
        <columns>Event_Name__c</columns>
        <columns>NAME</columns>
        <columns>Program_Format__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Sponsors__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Format__c</field>
            <operation>notEqual</operation>
            <value>Chapter,Chapter Event</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>GCC: Sustainable Development Goals as a Route to the World We Want</value>
        </filters>
        <label>Events - Internationaldeb</label>
    </listViews>
    <listViews>
        <fullName>LynnEvent</fullName>
        <columns>Sponsors__c</columns>
        <columns>Event_Name__c</columns>
        <columns>NAME</columns>
        <columns>Program_Format__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Name__c</field>
            <operation>contains</operation>
            <value>Chapter Leadership</value>
        </filters>
        <label>Lynns Events view</label>
    </listViews>
    <nameField>
        <displayFormat>EV-{0000}</displayFormat>
        <label>Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <recordTypes>
        <fullName>Current</fullName>
        <active>true</active>
        <label>Current</label>
    </recordTypes>
    <recordTypes>
        <fullName>History</fullName>
        <active>true</active>
        <label>History</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Enforce_the_population_of_Training_Event</fullName>
        <active>false</active>
        <description>This VR will make sure there is a value in field &apos;Training Event?&apos; on Event</description>
        <errorConditionFormula>ISPICKVAL( Training_Event__c , &apos;&apos; )</errorConditionFormula>
        <errorMessage>Please fill in the value for Training Event field below</errorMessage>
    </validationRules>
</CustomObject>